--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ layout: default
 
   <footer class="bg-navy-light min-h-screen flex flex-col">
     <div class="py-12 lg:py-16 flex-grow banner flex items-center">
-      <div class="container h-full text-center">
+      <div class="container md:h-full text-center">
         <h2 class="text-pink text-2xl md:text-3xl xl:text-4xl">
           Libérééééé, délivrééééé
         </h2>
