Feat: added facebook link in footer

--- a/index.html
+++ b/index.html
@@ -609,6 +609,9 @@ layout: default
         <div class="container h-full flex items-center">
           <img src="assets/img/logo-automate-me-small.svg" alt="" class="w-8">
           <p class="font-display text-green-light ml-4">Libérez votre entreprise des tâches répétitives</p>
+          <a href="https://www.facebook.com/Automateme-115423316902066/" target="_blank" class="ml-auto">
+            <img src="assets/img/facebook-icon.svg" alt="" class="w-8">
+          </a>
         </div>
       </div>
     </div>
