Feat: added fb tracking code on contact button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@ layout: default
           reposez-vous 😎
         </p>
         <div class="sm:inline-block mb-8">
-          <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy">
+          <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" 
+            target="_blank" class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy"
+            onClick="contactFb()">
             Demander un audit
           </a>
           <span class="text-navy text-center block w-full mt-2 font-body">C'est gratuit !</span>
@@ -374,7 +376,8 @@ layout: default
       </div>
 
       <div class="text-center">
-        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" class="typeform-share btn bg-white text-navy mt-8 shadow-navy border-navy">
+        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+          class="typeform-share btn bg-white text-navy mt-8 shadow-navy border-navy" onClick="contactFb()">
           Demander un audit
         </a>
         <span class="text-navy text-center block w-full mt-2 font-body">C'est gratuit !</span>
@@ -479,7 +482,8 @@ layout: default
       </div>
 
       <div class="text-center">
-        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy">
+        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+          class="typeform-share btn bg-green-light text-navy mt-8 shadow-navy border-navy" onClick="contactFb()">
           Demander un audit
         </a>
         <span class="text-navy text-center block w-full mt-2 font-body">C'est gratuit !</span>
@@ -488,137 +492,143 @@ layout: default
     </div>
   </section>
 
-  <section class="bg-navy text-pink-light">
-    <div class="container py-12 lg:py-16">
-      <h2 class="text-pink text-2xl md:text-3xl xl:text-4xl text-center">
-        Les chiffres sont formels
-      </h2>
-      <p class="text-lg max-w-4xl text-center mt-4 mx-auto mb-16">
-        Mais derrière les chiffres, il y a surtout des humains plus heureux !
-      </p>
+<section class="bg-navy text-pink-light">
+  <div class="container py-12 lg:py-16">
+    <h2 class="text-pink text-2xl md:text-3xl xl:text-4xl text-center">
+      Les chiffres sont formels
+    </h2>
+    <p class="text-lg max-w-4xl text-center mt-4 mx-auto mb-16">
+      Mais derrière les chiffres, il y a surtout des humains plus heureux !
+    </p>
 
-      <div class="flex flex-wrap sm:-mx-6 mt-8 md:mt-16 text-center text-lg">
-        <div class="w-full md:w-1/3 md:px-6 mb-8 md:mb-0">
-          <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
-            4 500 tâches
-          </h3>
-          <p>
-            Automatisées pour chacun de nos clients en moyenne.
-          </p>
-        </div>
-
-        <div class="w-full md:w-1/3 md:px-6 mb-8 md:mb-0">
-          <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
-            342 heures
-          </h3>
-          <p>
-            Economisées par an pour chaque salarié.
-          </p>
-        </div>
-
-        <div class="w-full md:w-1/3 md:px-6">
-          <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
-            6 825 €
-          </h3>
-          <p>
-            D’économie de salaire par an et par salarié.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="min-h-screen">
-    <div class="container py-12 lg:py-16">
-      <h2 class="text-navy text-2xl md:text-3xl xl:text-4xl text-center">
-        Les pourfendeurs de tâches chronophages
-      </h2>
-
-      <div class="flex flex-wrap sm:-mx-12 mt-8 md:mt-16">
-        <div class="w-full md:w-1/2 md:px-12 mb-12 md:mb-0">
-          <img src="assets/img/mehdi-coly-automate-me.png" alt="Photo de Mehdi Coly" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
-          <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
-            Mehdi Coly
-          </h3>
-          <p class="font-display text-navy text-lg md:text-xl mb-4">
-            CEO, serial entrepreneur, papa et hyper actif
-          </p>
-          <p class="md:text-lg text-gray">
-            Créateur de 5 entreprises, citoyen engagé pour l’environnement et papa, on pourrait croire que Mehdi a
-            découvert le secret du clônage. Même si il aimerait bien, sa productivité hors norme est due à son goût pour
-            l’automatisation !
-          </p>
-        </div>
-
-        <div class="w-full md:w-1/2 md:px-12">
-          <img src="assets/img/jeremy-brunet-automate-me.png" alt="Photo de Jérémy Brunet" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
-          <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
-            Jérémy Brunet
-          </h3>
-          <p class="font-display text-navy text-lg md:text-xl mb-4">
-            CTO, marketeur, et geek assumé
-          </p>
-          <p class="md:text-lg text-gray">
-            Titulaire d’un Master en Marketing et diplômé du CS50 d’Harvard, Jérémy est aussi un entrepreneur backé par
-            Kima Ventures et The Family. Quand il n’est pas occupé à coder des automatisations, il passe son temps à
-            apprendre à hacker et à tester les dernières nouveautés SaaS.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer class="bg-navy-light min-h-screen flex flex-col">
-    <div class="py-12 lg:py-16 flex-grow banner flex items-center">
-      <div class="container md:h-full text-center">
-        <h2 class="text-pink text-2xl md:text-3xl xl:text-4xl">
-          Libérééééé, délivrééééé
-        </h2>
-        <p class="text-pink-light text-xl md:text-2xl max-w-5xl mt-4 mx-auto mb-16">
-          On identifie pour vous les tâches chronophage qui pourraient être éliminées dans votre entreprise. L’audit est
-          gratuit et sans engagement, promis, juré !
+    <div class="flex flex-wrap sm:-mx-6 mt-8 md:mt-16 text-center text-lg">
+      <div class="w-full md:w-1/3 md:px-6 mb-8 md:mb-0">
+        <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
+          4 500 tâches
+        </h3>
+        <p>
+          Automatisées pour chacun de nos clients en moyenne.
         </p>
-        <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" class="typeform-share btn bg-white text-navy shadow-green border-green mx-auto">
-          Demander un audit
+      </div>
+
+      <div class="w-full md:w-1/3 md:px-6 mb-8 md:mb-0">
+        <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
+          342 heures
+        </h3>
+        <p>
+          Economisées par an pour chaque salarié.
+        </p>
+      </div>
+
+      <div class="w-full md:w-1/3 md:px-6">
+        <h3 class="text-green text-xl md:text-2xl lg:text-3xl mb-2">
+          6 825 €
+        </h3>
+        <p>
+          D’économie de salaire par an et par salarié.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="min-h-screen">
+  <div class="container py-12 lg:py-16">
+    <h2 class="text-navy text-2xl md:text-3xl xl:text-4xl text-center">
+      Les pourfendeurs de tâches chronophages
+    </h2>
+
+    <div class="flex flex-wrap sm:-mx-12 mt-8 md:mt-16">
+      <div class="w-full md:w-1/2 md:px-12 mb-12 md:mb-0">
+        <img src="assets/img/mehdi-coly-automate-me.png" alt="Photo de Mehdi Coly" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
+        <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
+          Mehdi Coly
+        </h3>
+        <p class="font-display text-navy text-lg md:text-xl mb-4">
+          CEO, serial entrepreneur, papa et hyper actif
+        </p>
+        <p class="md:text-lg text-gray">
+          Créateur de 5 entreprises, citoyen engagé pour l’environnement et papa, on pourrait croire que Mehdi a
+          découvert le secret du clônage. Même si il aimerait bien, sa productivité hors norme est due à son goût pour
+          l’automatisation !
+        </p>
+      </div>
+
+      <div class="w-full md:w-1/2 md:px-12">
+        <img src="assets/img/jeremy-brunet-automate-me.png" alt="Photo de Jérémy Brunet" class="h-64 mb-8 md:mb-12 mx-auto md:mx-0">
+        <h3 class="font-display font-bold text-navy text-xl md:text-2xl">
+          Jérémy Brunet
+        </h3>
+        <p class="font-display text-navy text-lg md:text-xl mb-4">
+          CTO, marketeur, et geek assumé
+        </p>
+        <p class="md:text-lg text-gray">
+          Titulaire d’un Master en Marketing et diplômé du CS50 d’Harvard, Jérémy est aussi un entrepreneur backé par
+          Kima Ventures et The Family. Quand il n’est pas occupé à coder des automatisations, il passe son temps à
+          apprendre à hacker et à tester les dernières nouveautés SaaS.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer class="bg-navy-light min-h-screen flex flex-col">
+  <div class="py-12 lg:py-16 flex-grow banner flex items-center">
+    <div class="container md:h-full text-center">
+      <h2 class="text-pink text-2xl md:text-3xl xl:text-4xl">
+        Libérééééé, délivrééééé
+      </h2>
+      <p class="text-pink-light text-xl md:text-2xl max-w-5xl mt-4 mx-auto mb-16">
+        On identifie pour vous les tâches chronophage qui pourraient être éliminées dans votre entreprise. L’audit est
+        gratuit et sans engagement, promis, juré !
+      </p>
+      <a href="https://form.typeform.com/to/SStiGiHp" data-mode="popup" target="_blank" 
+        class="typeform-share btn bg-white text-navy shadow-green border-green mx-auto" onClick="contactFb()">
+        Demander un audit
+      </a>
+    </div>
+  </div>
+  <div class="bg-navy">
+    <div class="container py-12 lg:py-16">
+      <p class="font-display text-pink font-semibold text-lg md:text-xl lg:text-2xl mb-4">
+        Automatisation,
+        <span class="font-light"> n.f.</span>
+        <span class="font-light italic"> [du verbe automatiser]</span>
+      </p>
+      <div class="flex flex-wrap sm:-mx-12 text-pink-light md:text-lg">
+        <div class="w-full md:w-1/2 md:px-12 mb-4 md:mb-0">
+          <p>
+            Ensemble de procédés qui rendent l’exécution d’une tâche automatique, sans intervention manuelle.
+          </p>
+        </div>
+        <div class="w-full md:w-1/2 md:px-12">
+          <p class="italic">
+            Exemple : “Depuis qu’on a automatisé la génération des contrats, Clémentine la commerciale a l’air
+            beaucoup plus détendue ✌️”
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="h-16 border-t-2 border-solid border-navy-light">
+      <div class="container h-full flex items-center">
+        <img src="assets/img/logo-automate-me-small.svg" alt="" class="w-8">
+        <p class="font-display text-green-light ml-4">Libérez votre entreprise des tâches répétitives</p>
+        <a href="https://www.facebook.com/Automateme-115423316902066/" target="_blank" class="ml-auto">
+          <img src="assets/img/facebook-icon.svg" alt="" class="w-8">
         </a>
       </div>
     </div>
-    <div class="bg-navy">
-      <div class="container py-12 lg:py-16">
-        <p class="font-display text-pink font-semibold text-lg md:text-xl lg:text-2xl mb-4">
-          Automatisation,
-          <span class="font-light"> n.f.</span>
-          <span class="font-light italic"> [du verbe automatiser]</span>
-        </p>
-        <div class="flex flex-wrap sm:-mx-12 text-pink-light md:text-lg">
-          <div class="w-full md:w-1/2 md:px-12 mb-4 md:mb-0">
-            <p>
-              Ensemble de procédés qui rendent l’exécution d’une tâche automatique, sans intervention manuelle.
-            </p>
-          </div>
-          <div class="w-full md:w-1/2 md:px-12">
-            <p class="italic">
-              Exemple : “Depuis qu’on a automatisé la génération des contrats, Clémentine la commerciale a l’air
-              beaucoup plus détendue ✌️”
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="h-16 border-t-2 border-solid border-navy-light">
-        <div class="container h-full flex items-center">
-          <img src="assets/img/logo-automate-me-small.svg" alt="" class="w-8">
-          <p class="font-display text-green-light ml-4">Libérez votre entreprise des tâches répétitives</p>
-          <a href="https://www.facebook.com/Automateme-115423316902066/" target="_blank" class="ml-auto">
-            <img src="assets/img/facebook-icon.svg" alt="" class="w-8">
-          </a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <script>
-    (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName,
-    id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id;
-    js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
-  </script>
-  <script type="text/javascript" src="assets/js/quote.js"></script>
+  </div>
+</footer>
+<script>
+  (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName,
+  id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id;
+  js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })()
+</script>
+<script type="text/javascript" src="assets/js/quote.js"></script>
+<script>
+  function contactFb() {
+  fbq('track', 'Contact');
+  };
+</script>
