Add ids to <p class="cta"> for Mixpanel

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ layout: default
               <p class="quote-author">
                 - Karim, commercial impliqué
               </p>
-              <p class="cta">
+              <p class="cta" id="missedSales">
                 La solution Automate.me →
               </p>
             </div>
@@ -84,7 +84,7 @@ layout: default
               <p class="quote-author">
                 - Lucas, manager désabusé
               </p>
-              <p class="cta">
+              <p class="cta" id="CRM">
                 La solution Automate.me →
               </p>
             </div>
@@ -112,7 +112,7 @@ layout: default
               <p class="quote-author">
                 - Clémentine, commerciale un peu stressée
               </p>
-              <p class="cta">
+              <p class="cta" id="salesPipe">
                 La solution Automate.me →
               </p>
             </div>
@@ -140,7 +140,7 @@ layout: default
               <p class="quote-author">
                 - Tiphaine, marketeuse ambitieuse
               </p>
-              <p class="cta">
+              <p class="cta" id="MKG">
                 La solution Automate.me →
               </p>
             </div>
@@ -168,7 +168,7 @@ layout: default
               <p class="quote-author">
                 - Jade, manageuse bien trop occupée
               </p>
-              <p class="cta">
+              <p class="cta" id="internalComm">
                 La solution Automate.me →
               </p>
             </div>
@@ -196,7 +196,7 @@ layout: default
               <p class="quote-author">
                 - Richard, chargé de relation clients pressé
               </p>
-              <p class="cta">
+              <p class="cta" id="paymentSystem">
                 La solution Automate.me →
               </p>
             </div>
@@ -224,7 +224,7 @@ layout: default
               <p class="quote-author">
                 - Axel, RH moderne
               </p>
-              <p class="cta">
+              <p class="cta" id="excel">
                 La solution Automate.me →
               </p>
             </div>
@@ -253,7 +253,7 @@ layout: default
               <p class="quote-author">
                 - Sarah, directrice des ventes imaginative
               </p>
-              <p class="cta">
+              <p class="cta" id="dashboard">
                 La solution Automate.me →
               </p>
             </div>
@@ -280,7 +280,7 @@ layout: default
               <p class="quote-author">
                 - Léa, RH humaniste
               </p>
-              <p class="cta">
+              <p class="cta" id="RH">
                 La solution Automate.me →
               </p>
             </div>
