--- a/members/welcome.html
+++ b/members/welcome.html
@@ -17,7 +17,7 @@ layout: default
           Bienvenue sur votre espace personnel.
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
-          Retrouvez ici tous vos services Automate Me auxquels vous avez souscrit pour vous faciliter la vie 😎
+            Personnalisez votre profil en cliquant <a href="#/ms/profile">ici</a>
         </p>
       </div>
     </div> 
