--- a/members/welcome.html
+++ b/members/welcome.html
@@ -2,17 +2,9 @@
 layout: default
 ---
 
-<section class="min-h-screen relative bg-top md:bg-left bg-no-repeat bg-contain" style="background-image: url('assets/img/bg-hero.svg');">
+<section class="min-h-screen relative bg-top md:bg-left bg-no-repeat bg-contain">
     <div class="container pt-8 lg:pt-16">
-      <img src="assets/img/logo-automate-me.svg" alt="" class="w-40 md:w-56">
       <div class="w-full md:w-1/2 mt-8 lg:mt-16 xxl:mt-32">
-        <div>
-          <span class="pill bg-pink text-gray mb-2 mr-2">Commercial</span>
-          <span class="pill bg-pink text-gray mb-2 mr-2">Marketing</span>
-          <span class="pill bg-pink text-gray mb-2 mr-2">RH</span>
-          <span class="pill bg-pink text-gray mb-2 mr-2">Administratif</span>
-          <span class="pill bg-pink text-gray mb-2 mr-2">Et + !</span>
-        </div>
         <h1 class="text-2xl sm:text-3xl md:text-4xl xl:text-5xl text-navy mt-2 lg:mt-4">
           Bienvenue sur votre espace personnel.
         </h1>
