--- a/members/welcome.html
+++ b/members/welcome.html
@@ -11,6 +11,9 @@ layout: default
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
           Retrouvez ici tous vos services Automate Me auxquels vous avez souscrit pour vous faciliter la vie 😎
         </p>
+        <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
+            Cliquez <a href="/project/summary">ici</a> pour accéder au contenu de votre projet 🗂
+        </p>
       </div>
     </div> 
 </section>
