--- a/members/login.html
+++ b/members/login.html
@@ -9,6 +9,7 @@ layout: default
           Connectez-vous à votre espace personnel
         </h1>
         <p class="text-lg sm:text-xl md:text-2xl text-navy mt-4">
+          Cliquez <a href="#/ms/signup">ici</a> pour créer votre compte.
           Cliquez <a href="#/ms/login">ici</a> pour vous identifier.
         </p>
       </div>
