--- a/project/apc10.html
+++ b/project/apc10.html
@@ -97,7 +97,7 @@ $(function(){
       }
   })
   //Post Request to webhook
-  $.ajax({
+  /*$.ajax({
   type: "POST",
   url: "https://hook.integromat.com/tvp4wlajq3ifo23o0knctemobpbfymws",
   data: {
@@ -114,6 +114,6 @@ $(function(){
   },
   success: "success",
   dataType: "json"
-});
+});*/
 });
 </script>
