--- a/project/apc10.html
+++ b/project/apc10.html
@@ -95,9 +95,9 @@ $(function(){
       } else if (target.id == 'url9'){
         $('#url10').prop('disabled', !target.checkValidity());
       }
-  })
+  })*/
   //Post Request to webhook
-  /*$.ajax({
+  $.ajax({
   type: "POST",
   url: "https://hook.integromat.com/tvp4wlajq3ifo23o0knctemobpbfymws",
   data: {
@@ -114,6 +114,6 @@ $(function(){
   },
   success: "success",
   dataType: "json"
-});*/
+});
 });
 </script>
