--- a/project/apc10.html
+++ b/project/apc10.html
@@ -17,39 +17,39 @@ layout: default
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required disabled>
+            <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <button type="submit" class="btn btn-default action-btn">Tracker ces produits</button>
@@ -74,7 +74,7 @@ layout: default
 <script>
 $(function(){
  //Bootstrap Validator
- $('form').validator().on('validated.bs.validator', function(e){
+ /*$('form').validator().on('validated.bs.validator', function(e){
    var target = e.relatedTarget;
       if (target.id == 'url1'){
         $('#url2').prop('disabled', !target.checkValidity());
