--- a/project/apc10.html
+++ b/project/apc10.html
@@ -72,6 +72,17 @@ layout: default
 </footer>
 
 <script>
+var url1 = document.getElementById('url1').value;
+var url2 = document.getElementById('url2').value;
+var url3 = document.getElementById('url3').value;
+var url4 = document.getElementById('url4').value;
+var url5 = document.getElementById('url5').value;
+var url6 = document.getElementById('url6').value;
+var url7 = document.getElementById('url7').value;
+var url8 = document.getElementById('url8').value;
+var url9 = document.getElementById('url9').value;
+var url10 = document.getElementById('url10').value;
+    
 var data = {
             url1 : document.getElementById('url1').value,
             url2 : document.getElementById('url2').value,
