--- a/project/apc10.html
+++ b/project/apc10.html
@@ -84,16 +84,16 @@ var url9 = document.getElementById('url9').value;
 var url10 = document.getElementById('url10').value;
     
 var data = {
-            url1 : document.getElementById('url1').value,
-            url2 : document.getElementById('url2').value,
-            url3 : document.getElementById('url3').value,
-            url4 : document.getElementById('url4').value,
-            url5 : document.getElementById('url5').value,
-            url6 : document.getElementById('url6').value,
-            url7 : document.getElementById('url7').value,
-            url8 : document.getElementById('url8').value,
-            url9 : document.getElementById('url9').value,
-            url10 : document.getElementById('url10').value
+            url1 : url1,
+            url2 : url2,
+            url3 : url3,
+            url4 : url4,
+            url5 : url5,
+            url6 : url6,
+            url7 : url7,
+            url8 : url8,
+            url9 : url9,
+            url10 : url10
         };
 $.ajax({
         type : 'POST',
