--- a/project/apc10.html
+++ b/project/apc10.html
@@ -52,7 +52,7 @@ layout: default
             <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
-          <button type="submit" class="btn btn-default action-btn">Tracker ces produits</button>
+          <button type="submit" class="btn btn-default action-btn" id="btn">Tracker ces produits</button>
         </form>
       </div>
     </div> 
@@ -72,7 +72,9 @@ layout: default
 </footer>
 
 <script>
-$.ajax({
+$(document).ready(function() {
+    $('#btn').click(function() {
+        $.ajax({
         type : 'POST',
         url : 'https://hook.integromat.com/tvp4wlajq3ifo23o0knctemobpbfymws',  
         data: {
@@ -92,8 +94,10 @@ $.ajax({
         },
         error: function(xhr, status, error) {
         // handle error
-      }
-    });   
+        }
+        });
+    });
+});
     
 /*$(function(){
  //Bootstrap Validator
