--- a/project/apc10.html
+++ b/project/apc10.html
@@ -13,23 +13,23 @@ layout: default
         </p>
         <form role="form" data-toggle="validator">
           <div class="form-group">
-            <input type="url" class="form-control" id="url1" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Votre URL doit commencer par https://www.amazon.fr/" required>
+            <input type="url" class="form-control" id="url1" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Votre URL doit commencer par https://www.amazon.fr/" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url2" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url3" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url4" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url5" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
@@ -41,15 +41,15 @@ layout: default
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url8" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url9" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url10" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <button type="submit" class="btn btn-default action-btn" id="btn">Tracker ces produits</button>
