--- a/project/apc10.html
+++ b/project/apc10.html
@@ -33,11 +33,11 @@ layout: default
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url6" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
-            <input type="url" class="form-control" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" pattern="^https:\/\/www\.amazon\.fr\/" data-error="Please provide a valid Amazon URL" required>
+            <input type="url" class="form-control" id="url7" placeholder="https://www.amazon.fr/dp/B084DWG2VQ/" data-error="Please provide a valid Amazon URL" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
